fix: make responsive by sudesh dai

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
 
         updateColors();
 
-        shuffledEmojis.forEach((emoji, index) => {
+        shuffledEmojis.slice(0,20).forEach((emoji, index) => {
             const box = document.createElement('div');
             box.className = 'item';
             box.dataset.emoji = emoji;
