--- a/index.html
+++ b/index.html
@@ -16,8 +16,11 @@
         <div class="game"></div>
         <button class="reset" onclick="window.location.reload();">Reset</button>
     </div>
+    <footer>
+        Made with <span class="heart">❤️</span> by Prajwal Shrestha
+    </footer>
     <script>
-        const emojis = ["❤️","❤️","😥","😥","😂","😂","😭","😭","🎉","🎉","😎","😎","🙄","🙄","😅","😅","🥺","🥺","🤩","🤩","😇","😇","🤪","🤪","🤬","🤬","😶‍🌫️","😶‍🌫️","🥶","🥶","🥱","🥱","😮‍💨","😮‍💨","💩","💩","👿","👿","🫢","🫢"];
+        const emojis = ["❤️","❤️","😥","😥","😂","😂","😭","😭","🎉","🎉","😎","😎","🙄","🙄","😅","😅","🥺","🥺","🤩","🤩"];
         const shuffledEmojis = emojis.sort(() => Math.random() - 0.5);
 
         let currentPlayer = 1;
@@ -42,7 +45,7 @@
 
         updateColors();
 
-        shuffledEmojis.slice(0,20).forEach((emoji, index) => {
+        shuffledEmojis.forEach((emoji, index) => {
             const box = document.createElement('div');
             box.className = 'item';
             box.dataset.emoji = emoji;
@@ -80,7 +83,7 @@
                                 player2ScoreElement.textContent = player2Score;
                             }
 
-                            if (document.querySelectorAll('.boxMatch').length === shuffledEmojis.slice(0,20).length) {
+                            if (document.querySelectorAll('.boxMatch').length === emojis.length) {
                                 alert('Game Over! Final Scores:\nPlayer 1: ' + player1Score + '\nPlayer 2: ' + player2Score);
                             }
                         } else {
